logs/offboard_pkg/build.make.300.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightLine()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:202:43: error: no matching function for call to ‘std::vector<mavros_msgs::GlobalPositionTarget_<std::allocator<void> > >::push_back()’
  202 |                 uav[i].lla_line.push_back();
      |                                           ^
In file included from /usr/include/c++/9/vector:67,
                 from /usr/include/boost/math/special_functions/math_fwd.hpp:26,
                 from /usr/include/boost/math/special_functions/round.hpp:15,
                 from /opt/ros/noetic/include/ros/time.h:58,
                 from /opt/ros/noetic/include/ros/ros.h:38,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/usr/include/c++/9/bits/stl_vector.h:1184:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = mavros_msgs::GlobalPositionTarget_<std::allocator<void> >; _Alloc = std::allocator<mavros_msgs::GlobalPositionTarget_<std::allocator<void> > >; std::vector<_Tp, _Alloc>::value_type = mavros_msgs::GlobalPositionTarget_<std::allocator<void> >]’
 1184 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/9/bits/stl_vector.h:1184:7: note:   candidate expects 1 argument, 0 provided
/usr/include/c++/9/bits/stl_vector.h:1200:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = mavros_msgs::GlobalPositionTarget_<std::allocator<void> >; _Alloc = std::allocator<mavros_msgs::GlobalPositionTarget_<std::allocator<void> > >; std::vector<_Tp, _Alloc>::value_type = mavros_msgs::GlobalPositionTarget_<std::allocator<void> >]’
 1200 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/9/bits/stl_vector.h:1200:7: note:   candidate expects 1 argument, 0 provided
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:110:36: error: no declaration matches ‘mavros_msgs::GlobalPositionTarget TaskManager::get_lla_line(Eigen::Vector3d&, double)’
  110 |  mavros_msgs::GlobalPositionTarget TaskManager::get_lla_line(Eigen::Vector3d &lla, double yaw_d)
      |                                    ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:110:36: note: no functions named ‘mavros_msgs::GlobalPositionTarget TaskManager::get_lla_line(Eigen::Vector3d&, double)’
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:15:7: note: ‘class TaskManager’ defined here
   15 | class TaskManager
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
